# live-transcribe

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  README.md  SIGNING.md  build_installer.sh  com.johansglock.live-transcribe.plist  create_app_bundle.sh  generate_icon.rs  generate_icon.sh  nl.300.live-transcribe.plist
.github/workflows/: release.yml
src/: audio.rs  config.rs  constants.rs  generate_icon.rs  hotkey.rs  hybrid_vad.rs  keyboard.rs  lib.rs  main.rs  model_download.rs  sandbox.rs  text_diff.rs  transcription.rs  transcription_state.rs  transcription_worker.rs  tray.rs
tests/: hybrid_vad_tests.rs  state_management_tests.rs
