[package]
name = "live-transcribe"
version = "0.1.0"
edition = "2021"
authors = ["Johan Sglock"]
description = "Live audio transcription system tray app with Whisper AI - 100% offline with GPU acceleration"
license = "MIT"
repository = "https://github.com/johansglock/live-transcribe"
keywords = ["whisper", "transcription", "speech-to-text", "macos", "tray"]
categories = ["multimedia::audio", "command-line-utilities"]

[lib]
name = "live_transcribe"
path = "src/lib.rs"

[[bin]]
name = "live-transcribe"
path = "src/main.rs"

[dependencies]
# System tray
tray-icon = "0.14"
image = "0.25"

# YAML configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Global hotkeys
global-hotkey = "0.6"

# Audio capture
cpal = "0.15"

# Whisper integration
whisper-rs = { version = "0.12", features = ["coreml"] }

# Cross-platform paths
dirs = "5.0"

# Error handling
anyhow = "1.0"

# Event loop
tao = "0.28"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-foundation = "0.9"
core-graphics = "0.23"
